<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navi4Uni</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>	
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_building_info">BuildingInfoActivity</string>
     <string name="zdjecie_budynku">Building photo</string>
     <string name="favorite_desc">Favourites</string>
     <string name="marker_okbutton">Anuluj</string>
	 <string name="event">Event</string>
	 <string name="location">Building</string>
     <string name="description">Description</string>
     <string name="allDay">All day event</string>
     <string name="addEvent">Add event</string>
     <string name="setTime">Set time</string>
     <string name="time">Time</string>
     <string name="hour">HH</string>
     <string name="minute">MM</string>
     <string name="reminder">Reminder</string>
     <string name="search">Search</string>
     <string name="filter">Filter</string>
     <string name="favourite">Favourite</string>
     <string name="map">Map</string>
     <string name="calendar">Calendar</string>
     <string name="settings">Settings</string>
     <string name="list">List</string>
     <string name="dailyPlan">Daily plan</string>
     
     <string name="updateDate">Last update</string>
     <string name="refreshMap">Refresh map</string>
     <string name="getLastUpdate">Get newest version</string>
     <string name="chooseUniversity">Choose campus</string>
     <string name="getNewObjects">Get new places</string>
     <string name="favouriteList">Favourites</string>
     <string name="favouriteListEmpty">Favourites list is empty</string>
     <string name="objectFilter">Object filter</string>
     <string name="show">Show</string>
     <string name="allFieldsEmpty">All fields empty! Map was cleared.</string>
     <string name="cancel">Anuluj</string>
     <string name="searchForPlace">Search for location..</string>
     <string name="enterSearchPhrase">Enter search phrase</string>
     <string name="add">Add</string>
     <string name="eventList">Event list</string>
     
     <string name="marker_addevent_button">Add event</string>
     <string name="marker_showevent_button">Show events</string>
          
     <string name="turnOnLocalization">Turn on GPS!</string>
     <string name="turnOnInternetConnection">Turn on internet connection!</string>
     <string name="wrongUrl">Error related with a link to an internet resource</string>
     <string name="parserError">Error while parsing downloaded data</string>

</resources>
