<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                <EditText
                    android:id="@+id/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:hint="@string/event">

                    <requestFocus />
                </EditText>
       		 </LinearLayout>
       		 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:hint="@string/location">

                </EditText>
       		 </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:hint="@string/description">

                </EditText>
       		 </LinearLayout>
       		 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allDay" />

       		 </LinearLayout>
			 <LinearLayout
       		     android:layout_width="match_parent"
       		     android:layout_height="match_parent"
       		     android:orientation="horizontal"
       		     android:paddingBottom="@dimen/activity_vertical_margin" >
				<EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    android:layout_weight="0.3"
                    android:inputType="time"
                    android:focusable="false"
                    android:clickable="true"
                    android:focusableInTouchMode="false"
                    >

                </EditText>

				<EditText
				    android:id="@+id/editText5"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.7"
				    android:hint="@string/minute"
				    android:focusable="false"
                    android:clickable="true"
                    android:focusableInTouchMode="false"
				    android:inputType="time" />


       		 </LinearLayout>
       		 <LinearLayout
       		     android:layout_width="match_parent"
       		     android:layout_height="match_parent"
       		     android:orientation="horizontal"
       		     android:paddingBottom="@dimen/activity_vertical_margin" >
				<EditText
                    android:id="@+id/editText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    android:layout_weight="0.3"
                    android:inputType="time"
                    android:focusable="false"
                    android:clickable="true"
                    android:focusableInTouchMode="false">

                </EditText>

				<EditText
				    android:id="@+id/editText7"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.7"
				    android:hint="@string/minute"
				    android:focusable="false"
                    android:clickable="true"
                    android:focusableInTouchMode="false"
				    android:inputType="time" />


       		 </LinearLayout>
       		  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:inputType="number"
                    android:hint="@string/reminder">

                </EditText>
       		 </LinearLayout>
       		 <LinearLayout
       		     android:layout_width="match_parent"
       		     android:layout_height="match_parent"
       		     android:orientation="vertical"
       		     android:paddingBottom="@dimen/activity_vertical_margin" >

       		 </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>