<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00a2c8"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        tools:ignore="MissingPrefix" >

        <TextView
            android:id="@+id/building_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFF" />
        
        <TextView
            android:id="@+id/building_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:textSize="15sp"
			android:textStyle="bold"
			android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:maxLines="10"
            android:singleLine="false"
            android:textColor="#FFF" />
        
        <TextView
            android:id="@+id/building_openhours"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxLines="10"
            android:singleLine="false"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/building_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxLines="10"
            android:singleLine="false"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/building_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:autoLink="phone"
            android:textColor="#FFF"
            android:textColorLink="#0048ff" />

        <TextView
            android:id="@+id/building_www"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:autoLink="web"
            android:textColor="#FFF"
            android:textColorLink="#0048ff" />

        <TextView
            android:id="@+id/building_mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:autoLink="email"
            android:textColor="#FFF"
            android:textColorLink="#0048ff" />

        <TextView
            android:id="@+id/building_department"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/building_directions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxLines="10"
            android:singleLine="false"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/building_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/zdjecie_budynku" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/favorite_desc" />

        <LinearLayout
		    android:id="@+id/linearLayout2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		 
            android:background="#d9d9d9"
		    android:orientation="horizontal" >
			<Button
	            android:id="@+id/dialogShowEventsButton"
	            android:textSize="14sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginTop="1dp"
            	android:layout_marginBottom="1dp"
	            android:layout_marginRight="1dp"
	            android:background="#FFF"
	            android:text="@string/marker_showevent_button" />
			
			<Button
	            android:id="@+id/addEventButton"
	            android:textSize="14sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginTop="1dp"
            	android:layout_marginBottom="1dp"
	            android:background="#FFF"
	            android:text="@string/marker_addevent_button" />
		</LinearLayout>
		
        <Button
            android:id="@+id/dialogBuildingButtonOK"
            android:textSize="14sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFF"
            android:text="@string/marker_okbutton" />
    </LinearLayout>

</ScrollView>